--- a/public/styles/partials/navigation.css
+++ b/public/styles/partials/navigation.css
@@ -43,7 +43,7 @@
   &:focus-visible,
   &.current {
     background-color: var(--accent);
-    color: #fff;
+    color: #000;
   }
 
   &.current:focus-visible {
